--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -4,7 +4,7 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-        <H1>{{ x }}</H1>
+        <H1>States</H1>
         <UL>
             {% for obj in d.values()|sort(attribute="name") %}
                 <LI> {{ obj.id }}: <B>{{ obj.name }}</B></LI>
